--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-array-carousel</title>
 </head>
-<body>
+<body id="container">
     
     <script src="./js/app.js"></script>
 
